// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job Card - Bookmark should render bookmarked 1`] = `
<BookmarkButton
  className="bookmarkButton"
  isBookmarked={true}
  onBookmarkClick={[Function]}
  svgClassName="bookmarkSvg"
/>
`;

exports[`Job Card - Bookmark should render bookmarked 2`] = `
<BookmarkButton
  className="bookmarkButton"
  isBookmarked={false}
  onBookmarkClick={[Function]}
  svgClassName="bookmarkSvg"
/>
`;

exports[`Job Card - Bookmark should render null with default props 1`] = `""`;
